--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -56,6 +56,8 @@
 
     <div class="grid__catalogue">
         <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
+        <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
+
         <div class="shop-item" th:each="item: ${items}"
              th:classappend="|${item.type.name()=='MELEE' ? 'shop-item_melee' : item.type.name()=='PISTOL' ? 'shop-item_pistol' :
               item.type.name()=='SUBMACHINE_GUN' ? 'shop-item_smg' : item.type.name()=='ASSAULT_RIFLE' ? 'shop-item_assault' :
