--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,3 +1,5 @@
+@import "flexes.css";
+
 body {
     font-family: "Helvetica", sans-serif;
     font-size: 17px;
@@ -145,74 +147,6 @@ select {
 .icon_giant {
     width: 200px;
     height: 200px;
-}
-
-.flex-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-column-no-center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-
-.flex-column-left {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-
-.flex-column-top {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.flex-row-left {
-    display: flex;
-    justify-content: flex-start;
-}
-
-.flex-row-right {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.flex-row {
-    display: flex;
-    justify-content: center;
-}
-
-.flex-row-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-row-center-left {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.flex-row-between {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.flex-row-around {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 }
 
 .light-gray-bg {
