--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -20,6 +20,7 @@ body {
 .search-bar-input {
     padding: 0 10px;
     height: 35px;
+    width: 30vw;
     border: 2px solid black;
     border-radius: 10px 0 0 10px;
     display: inline;
@@ -74,7 +75,7 @@ body {
 
 .shop-item {
     background-size: cover;
-    display: inline-block;
+    display: inline-flex;
     width: 220px;
     min-height: 220px;
     border: 2px solid black;
