--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="desktop-header fixed-header fixed-header_small flex-row-between">
-    <form method="get" action="#" th:action="@{/manufacturer/market}" class="flex-row-center mobile-hide">
+    <form method="get" action="#" th:action="@{/manufacturer/market/} + ${category}" class="flex-row-center mobile-hide">
         <input type="search" name="name" class="search-bar-input" placeholder="Search..." th:value="${param.name}">
         <input type="submit" class="search-bar-button button" value="Go!">
         <input type="hidden" name="sort" th:value="${param.sort}"/>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="grid">
-    <form method="get" action="#" th:action="@{/manufacturer/market}"
+    <form method="get" action="#" th:action="@{/manufacturer/market/} + ${category}"
           class="mobile-hide grid__search-bar search-bar-sorter flex-row-right">
         Sort by: &nbsp;
         <select name="sort" class="input_big" onchange="this.form.submit()">
@@ -52,7 +52,7 @@
         <input type="hidden" name="type" th:value="${param.type}">
     </form>
 
-    <form method="get" action="#" th:action="@{/manufacturer/market}"
+    <form method="get" action="#" th:action="@{/manufacturer/market/} + ${category}"
           class="mobile-show grid__search-bar flex-row-between">
         <span>
             <input name="name" type="search" class="search-bar-input" placeholder="Search...">
@@ -71,35 +71,38 @@
     </form>
 
     <div id="mobile-menu" class="grid__departments flex-column-no-center">
-        <a class="department-button" th:classappend="${param.type == 'all' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=all'">
-            All </a>
-        <a class="department-button" th:classappend="${param.type == 'melee' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=melee'">
+        <a class="department-button bold" th:classappend="${category == 'weapon' and param.type == null ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name})}">
+            All weapons </a>
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'melee' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='melee')}">
             Melee weapons </a>
-        <a class="department-button" th:classappend="${param.type == 'pistol' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=pistol'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'pistol' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='pistol')}">
             Pistols </a>
-        <a class="department-button" th:classappend="${param.type == 'submachine_gun' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=submachine_gun'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'submachine_gun' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='submachine_gun')}">
             SMGs </a>
-        <a class="department-button" th:classappend="${param.type == 'assault_rifle' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=assault_rifle'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'assault_rifle' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='assault_rifle')}">
             Assault riffles </a>
-        <a class="department-button" th:classappend="${param.type == 'light_machine_gun' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=light_machine_gun'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'light_machine_gun' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='light_machine_gun')}">
             Light machine guns </a>
-        <a class="department-button" th:classappend="${param.type == 'sniper_rifle' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=sniper_rifle'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'sniper_rifle' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='sniper_rifle')}">
             Sniper rifles </a>
-        <a class="department-button" th:classappend="${param.type == 'alien' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=alien'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'alien' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/weapon(sort=${param.sort}, name=${param.name}, type='alien')}">
             Alien weapon </a>
-        <a class="department-button" th:classappend="${param.type == 'land' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=land'">
+        <a class="department-button bold" th:classappend="${category == 'transport' and param.type == null ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/transport(sort=${param.sort}, name=${param.name})}">
+            All transport </a>
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'land' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/transport(sort=${param.sort}, name=${param.name}, type='land')}">
             Land transport </a>
-        <a class="department-button" th:classappend="${param.type == 'air' ? 'chosen-department' : ''}"
-           th:href="@{/manufacturer/market} + '?sort=' + ${param.sort} + '&name=' + ${param.name} + '&type=air'">
+        <a class="department-button" th:classappend="${param.type?.get(0) == 'air' ? 'chosen-department' : ''}"
+           th:href="@{/manufacturer/market/transport(sort=${param.sort}, name=${param.name}, type='air')}">
             Air transport </a>
     </div>
 
