--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -27,7 +27,7 @@
         <a th:href="@{/manufacturer/newProduct}">
             <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.svg}">
         </a>
-        <a th:href="@{/}">
+        <a th:href="@{/manufacturer/cart}">
             <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
         </a>
     </div>
@@ -139,7 +139,7 @@
     <a th:href="@{/manufacturer/newProduct}">
         <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.svg}">
     </a>
-    <a th:href="@{/}">
+    <a th:href="@{/manufacturer/cart}">
         <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
     </a>
 </div>
