--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -108,6 +108,8 @@
 
     <div class="grid__catalogue">
         <div id="message" class="flash hidden"></div>
+        <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
+        <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 
         <div class="shop-item flex-column-around" th:each="item: ${items}"
              th:classappend="|${item.type.name()=='MELEE' ? 'shop-item_melee' : item.type.name()=='PISTOL' ? 'shop-item_pistol' :
