--- a/src/main/resources/templates/manufacturers/manufacturer__cart.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__cart.html
@@ -44,7 +44,7 @@
                 <form th:action="@{cart/updateQuantity}" method="post" class="form-item_small flex-column">
                     <b>Quantity</b>
                     <input type="hidden" name="itemId" th:value="${item.id}">
-                    <input type="number" name="newQuantity" th:value="${item.quantity()}" class="input_big form-item_small">
+                    <input type="number" name="newQuantity" th:value="${item.quantity}" class="input_big form-item_small">
                     <input type="submit" class="button form-item" value="Update quantity">
                 </form>
             </div>
